# idx-exchange-jp

./: .gitignore  README.md  pyproject.toml
data/: .gitignore  README.md
docs/: .gitignore  data_cleaning_log.md  df_overview_output.txt
idx/: setup.py
idx/idx/: config.py  utils.py
notebooks/: jp-data-cleaning.ipynb  jp-eda.ipynb  jp-feature-engineering.ipynb  week_zero.ipynb
py/: crmls_listed.py  crmls_sold.py  migrated
scripts/: bulk_geocode.py  clean_data.py  concat_residential.py  df_overview.py  df_overview_output.txt  get_fred.py  get_mls.py
src/idx/: __init__.py  config.py  utils.py
src/idx/components/: __init__.py  feature_engineering.py  ingest.py  preprocessing.py
